# ChangeLog for app-text/sphinxcontrib-httpdomain
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Aug 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-httpdomain-1.1.5.ebuild:
  Keyworded amd64.

  24 Jul 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-httpdomain-1.1.2.ebuild,
  sphinxcontrib-httpdomain-1.1.4.ebuild:
  Keyworded x86.

  24 Jul 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-httpdomain-1.1.4.ebuild:
  Keyworded amd64.

*sphinxcontrib-httpdomain-1.1.5 (09 Jul 2011)

  09 Jul 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-httpdomain-1.1.5.ebuild:
  Version bump [429].

  07 Jul 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-httpdomain-1.0.ebuild, sphinxcontrib-httpdomain-1.1.2.ebuild:
  Keyworded x86.

  07 Jul 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-httpdomain-1.1.2.ebuild:
  Keyworded amd64.

  02 Jul 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-httpdomain-1.0.ebuild:
  Keyworded amd64.

  25 Jun 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-httpdomain-1.0.ebuild:
  Whitespace fix.

*sphinxcontrib-httpdomain-1.1.4 (22 Jun 2011)

  22 Jun 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-httpdomain-1.1.4.ebuild:
  Version bump [393].

  12 Jun 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-httpdomain-1.0.ebuild, sphinxcontrib-httpdomain-1.1.2.ebuild:
  Keyworded ~x86.

*sphinxcontrib-httpdomain-1.1.2 (07 Jun 2011)

  07 Jun 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-httpdomain-1.1.2.ebuild:
  Version bump [386].

  02 Jun 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added missing watch file.

*sphinxcontrib-httpdomain-1.0 (02 Jun 2011)

  02 Jun 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-httpdomain-1.0.ebuild, +metadata.xml:
  Initial ebuild, by me [384].
