@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST sphinxcontrib-httpdomain-1.1.4.tar.gz 6899 RMD160 d224d90286cf7dddec7a6c3ee87a4e3c7a8150e8 SHA1 ceeb8e81b59303d47b3dc40c73acd1618686c3c9 SHA256 5950c776696bd5c14efa953441a3c96472119640c918b6ec4e934f4de0ee7d67
 DIST sphinxcontrib-httpdomain-1.1.5.tar.gz 6957 RMD160 6f43aaf2e20067b16957602013e20e5ef6a9b989 SHA1 afc13b52cfd8be22100fc2fdcb2e8404e5ae6f06 SHA256 861c011a2e308e4431a689927d50befe63636e32f472884a43c595c8ed87a94c
-EBUILD sphinxcontrib-httpdomain-1.1.4.ebuild 639 RMD160 b3a993f3463c4861dd15d22aedd3fe704dec1105 SHA1 6230151ab08b12f34fffd44eb35ba4e10b4c5384 SHA256 d008efa91145cf6fe8235436ae86a67a7e13c662634440469dae7b3d2b35ed21
-EBUILD sphinxcontrib-httpdomain-1.1.5.ebuild 640 RMD160 edcccacbe473317fd8e7414bd1c4fa7b8bc25102 SHA1 385379488617702cfef47e3fc58916a590b15c27 SHA256 1bf77a39a1cb5b6a8b9b7d7cb08b6db98b783c14a44df274d0eddfc5e0d4b0c6
-MISC ChangeLog 1819 RMD160 ee9393bc48c3a4127cb83b825a4a1fcec87696ad SHA1 3232ec870d8d66a5c9e5b81afb1e353a730c21a9 SHA256 158933dcb4e2e2de5503a5d80c2fdb8a473f88001ee30292e6ddea062806d42c
+EBUILD sphinxcontrib-httpdomain-1.1.5.ebuild 639 RMD160 b3a993f3463c4861dd15d22aedd3fe704dec1105 SHA1 6230151ab08b12f34fffd44eb35ba4e10b4c5384 SHA256 d008efa91145cf6fe8235436ae86a67a7e13c662634440469dae7b3d2b35ed21
+MISC ChangeLog 1965 RMD160 e03c46a153ebfe8e1913e1ebb06547466abac22e SHA1 5f4286cbdb86961cb131b0305863637e45e54868 SHA256 adedcf77466532faf1aea92a7c58628d76a0bf6dbae3daf3b1cc49657fef4889
 MISC metadata.xml 702 RMD160 e0ab3bac531018b4b5cfb5d7d0da023a2224dfac SHA1 21135cb889825381cde64104e42af1394cc1defa SHA256 22b33253e42971dd67a36bc49e4ab2025d543a27d72400150c1f1b8cf7543d6c
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk5ARSQACgkQzJrj3cAXR0lm7wCeK9STBHe3k8xawyFB4YN4UGo9
-cgIAoLh7vka8zeRH+SuIl2+I1gthEbHx
-=fN/s
+iEYEAREKAAYFAk5ASQ0ACgkQzJrj3cAXR0n7lQCgtjJhjziB15lUGGp2HgoHk0E0
+e6gAnA8yqlRPpfMzdD+bAGXV0EBFrf1U
+=n4B2
 -----END PGP SIGNATURE-----
