@@ -1,22 +1,0 @@
-dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-dev-python/setuptools >=dev-python/sphinx-1.0 >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-0
-mirror://pypi/s/sphinxcontrib-httpdomain/sphinxcontrib-httpdomain-1.1.4.tar.gz
-
-http://packages.python.org/sphinxcontrib-httpdomain/
-BSD-2
-dev-python/sphinx extension to document HTTP APIs
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-
-
-
-
-3
-
-compile install postinst postrm prepare
-
-
-
-
-
