@@ -1,4 +1,3 @@
-* app-text/sphinxcontrib-httpdomain-1.1.5     x86 SCHEDULED: <2011-08-08 Mon>
 * dev-python/sure-0.6                         x86 SCHEDULED: <2011-08-08 Mon>
 * dev-python/tox-1.1                          x86 SCHEDULED: <2011-08-08 Mon>
 * dev-python/pycallgraph-0.5.1              amd64 SCHEDULED: <2011-08-10 Wed>
